--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -2133,7 +2133,9 @@
     <ClCompile Include="..\..\xbmc\FileSystem\VideoDatabaseDirectory\DirectoryNodeCountry.cpp">
       <Filter>Source Files\Filesystem\VideoDatabaseDirectory</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\cdrip\EncoderFlac.cpp" />
+    <ClCompile Include="..\..\xbmc\cdrip\EncoderFlac.cpp">
+      <Filter>libraries\cdrip</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\xbmc\win32\NetworkWin32.h">
@@ -4488,8 +4490,12 @@
     <ClInclude Include="..\..\xbmc\SystemGlobals.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xbmc\cdrip\DllFlacEnc.h" />
-    <ClInclude Include="..\..\xbmc\cdrip\EncoderFlac.h" />
+    <ClInclude Include="..\..\xbmc\cdrip\EncoderFlac.h">
+      <Filter>libraries\cdrip</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\cdrip\DllFlacEnc.h">
+      <Filter>cores\paplayer</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\xbmc\win32\XBMC.ico">
