--- a/xbmc/addons/Makefile
+++ b/xbmc/addons/Makefile
@@ -3,6 +3,7 @@ INCLUDES+=-I. -I../ -I../../guilib -I../utils -I../linux
 SRCS=Addon.cpp \
 		 AddonManager.cpp \
 		 AddonStatusHandler.cpp \
+		 PluginSource.cpp \
 		 ScreenSaver.cpp \
 		 Scraper.cpp \
 		 Skin.cpp \
